# background-manager

./: CMakeLists.txt  ImageDownload.cpp  README.md
cmpe320-team12/: backgroundChanger.cp  git_tutorial.txt  mac_curl_tutorial.txt
